[package]
name = "ethereum-nft-tracker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
env_logger = "0.8.4"
thiserror = "1.0.20"
anyhow = "1.0.34"

tokio = { version = "1.7.0", features = ["full"] }
array-bytes = "1.3.3"
web3 = { version = "0.16.0", git = "https://github.com/wuminzhe/rust-web3.git", branch = "master", features = ["signing"] }

nft-events = { path = "../../libs/nft-events" }
serde = { version = "1.0", features = ["derive"] }
confy = "0.4.0"

async-trait = "0.1.51"
directories-next = "2.0.0"
rusqlite = "0.25.3"

serde_json = "1.0"
sidekiq = "0.9"
